; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-method/src/extr_method.c_method_unbind.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-method/src/extr_method.c_method_unbind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RObject = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"@owner\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"@name\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"proc\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"@klass\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c"UnboundMethod\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"@recv\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @method_unbind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @method_unbind(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.RObject*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @mrb_intern_lit(i32* %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @mrb_iv_get(i32* %10, i32 %11, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @mrb_intern_lit(i32* %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %19 = call i32 @mrb_iv_get(i32* %15, i32 %16, i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32*, i32** %3, align 8
  %21 = load i32, i32* %4, align 4
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @mrb_intern_lit(i32* %22, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %24 = call i32 @mrb_iv_get(i32* %20, i32 %21, i32 %23)
  store i32 %24, i32* %8, align 4
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* %4, align 4
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @mrb_intern_lit(i32* %27, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %29 = call i32 @mrb_iv_get(i32* %25, i32 %26, i32 %28)
  store i32 %29, i32* %9, align 4
  %30 = load i32*, i32** %3, align 8
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @mrb_class_get(i32* %31, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  %33 = call %struct.RObject* @method_object_alloc(i32* %30, i32 %32)
  store %struct.RObject* %33, %struct.RObject** %5, align 8
  %34 = load i32*, i32** %3, align 8
  %35 = load %struct.RObject*, %struct.RObject** %5, align 8
  %36 = load i32*, i32** %3, align 8
  %37 = call i32 @mrb_intern_lit(i32* %36, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @mrb_obj_iv_set(i32* %34, %struct.RObject* %35, i32 %37, i32 %38)
  %40 = load i32*, i32** %3, align 8
  %41 = load %struct.RObject*, %struct.RObject** %5, align 8
  %42 = load i32*, i32** %3, align 8
  %43 = call i32 @mrb_intern_lit(i32* %42, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  %44 = call i32 (...) @mrb_nil_value()
  %45 = call i32 @mrb_obj_iv_set(i32* %40, %struct.RObject* %41, i32 %43, i32 %44)
  %46 = load i32*, i32** %3, align 8
  %47 = load %struct.RObject*, %struct.RObject** %5, align 8
  %48 = load i32*, i32** %3, align 8
  %49 = call i32 @mrb_intern_lit(i32* %48, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %50 = load i32, i32* %7, align 4
  %51 = call i32 @mrb_obj_iv_set(i32* %46, %struct.RObject* %47, i32 %49, i32 %50)
  %52 = load i32*, i32** %3, align 8
  %53 = load %struct.RObject*, %struct.RObject** %5, align 8
  %54 = load i32*, i32** %3, align 8
  %55 = call i32 @mrb_intern_lit(i32* %54, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %56 = load i32, i32* %8, align 4
  %57 = call i32 @mrb_obj_iv_set(i32* %52, %struct.RObject* %53, i32 %55, i32 %56)
  %58 = load i32*, i32** %3, align 8
  %59 = load %struct.RObject*, %struct.RObject** %5, align 8
  %60 = load i32*, i32** %3, align 8
  %61 = call i32 @mrb_intern_lit(i32* %60, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %62 = load i32, i32* %9, align 4
  %63 = call i32 @mrb_obj_iv_set(i32* %58, %struct.RObject* %59, i32 %61, i32 %62)
  %64 = load %struct.RObject*, %struct.RObject** %5, align 8
  %65 = call i32 @mrb_obj_value(%struct.RObject* %64)
  ret i32 %65
}

declare dso_local i32 @mrb_iv_get(i32*, i32, i32) #1

declare dso_local i32 @mrb_intern_lit(i32*, i8*) #1

declare dso_local %struct.RObject* @method_object_alloc(i32*, i32) #1

declare dso_local i32 @mrb_class_get(i32*, i8*) #1

declare dso_local i32 @mrb_obj_iv_set(i32*, %struct.RObject*, i32, i32) #1

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i32 @mrb_obj_value(%struct.RObject*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
